--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,54 @@
 ---
 title: "Kunlei Lian"
+description: "OR/ML Scientist"
+page-layout: full
+# resources:
 ---
 
+::: {.column-page-inset}
+::: {.column-page-inset-left}
+
+I am an Operations Research Scientist and Machine Learning practitioner.
+
+I am currently working at Marriott Vacations Worldwide responsible for marketing campaign optimization, inventory control and revenue management.
+
+Previously, I contributed to various supply chain optimization projects at Walmart Global Technology. 
+
+My academic journey includes earning a Ph.D. in Industrial Engineering from the University of Arkansas, where my research centered on solving vehicle routing problems. Prior to that, I obtained both my B.S. and M.S. degrees in Industrial Engineering from Huazhong University of Science and Technology in China.
+:::
+
+<div class="column-margin column-container">
+![](./headshot.jpg){.rounded}
+</div>
+:::
+
+{{< pagebreak >}}
+
+::: {.column-page-inset .text-center}
+```{=html}
+<!-- <a class="btn btn-outline-dark", href="https://twitter.com/kunlei" target="_blank" rel="noopener noreferrer">
+    <i class="bi bi-twitter" role='img' aria-label='Twitter'></i>
+</a> -->
+
+<a class="btn btn-outline-dark", href="https://github.com/kunlei" target="_blank" rel="noopener noreferrer">
+    <i class="bi bi-github" role='img' aria-label='Github'></i>
+</a>
+
+<a class="btn btn-outline-dark", href="https://www.linkedin.com/in/kunlei-lian/" target="_blank" rel="noopener noreferrer">
+    <i class="bi bi-linkedin" role='img' aria-label='LinkedIn'></i>
+</a>
+
+<a class="btn btn-outline-dark", href="https://scholar.google.com/citations?user=beuQ5RsAAAAJ&hl=en)" target="_blank" rel="noopener noreferrer">
+    <i class="ai ai-google-scholar" role='img' aria-label='Google Scholar'></i>
+</a>
+
+<!-- <a class="btn btn-outline-dark", href="https://arxiv.org/a/dimmery_d_1.html" target="_blank" rel="noopener noreferrer">
+    <i class="ai ai-arxiv" role='img' aria-label='arXiv'></i>
+</a>
+
+<a class="btn btn-outline-dark", href="mailto:pddimmery@gmail.com" target="_blank" rel="noopener noreferrer">
+    <i class="ai bi-envelope" role='img' aria-label='email'></i>
+</a> -->
+```
+:::
 
