--- a/about.qmd
+++ b/about.qmd
@@ -1,5 +1,113 @@
 ---
-title: "About"
+title: "Resume"
 ---
 
-About this site
+### Education
+
+::: {.d-flex .justify-content-between}
+::: {}
+**University of Arkasnas**  
+Ph.D. in Industrial Engineering
+:::
+::: {.text-end}
+Fayetteville, Arkansas  
+2012 - 2017
+:::
+:::
+- Dissertation: [*Service Consistency in Vehicle Routing*](https://scholarworks.uark.edu/etd/1912/)
+<!-- - Developed an enhanced multi-directional local search algorithm for approximating Pareto frontiers in multi-objective optimization, effectively solving the consistent vehicle routing problems (ConVRP).
+- Developed a large neighborhood search and a branch-and-price algorithm to solve the ConVRP to minimize traveling costs. -->
+
+::: {.d-flex .justify-content-between}
+::: {}
+**Huazhong University of Science and Technology**  
+M.S. in Industrial Engineering
+:::
+::: {.text-end}
+Wuhan, China
+2009 - 2012
+:::
+:::
+
+::: {.d-flex .justify-content-between}
+::: {}
+**Huazhong University of Science and Technology**  
+B.S. in Industrial Engineering
+:::
+::: {.text-end}
+Wuhan, China
+2005 - 2009
+:::
+:::
+
+### Experience
+
+::: {.d-flex .justify-content-between}
+::: {}
+**Marriott Vacations Worldwide**  
+:::
+::: {.text-end}
+October 2023 - present
+:::
+:::
+*Principal Data Scientist / Associate Director - Data Science*
+
+- Marketing campaign optimization
+- Owner propensity to buy
+- Inventory optimization
+
+::: {.d-flex .justify-content-between}
+::: {}
+**Walmart**  
+:::
+::: {.text-end}
+Map 2016 - August 2023
+:::
+:::
+*Principal Data Scientist*
+
+- Oversaw all order optimization initiatives for Walmart grocery and regional distribution center (GDC\&RDC) network as principal data scientist, focusing on improving efficiencies in GDC\&RDC inbound and outbound replenishment operations.
+- Led the development of truckload optimization (TLO) engine as the core of the next-gen inbound replenishment system that optimizes order quantities from vendors to DCs, enabled its rollout to 10,000+ lanes to replace legacy TLO.
+- Designed and implemented a truck planning optimization (TPO) engine to smooth ship point volumes and reduce unplanned truck needs, anticipating a \$9 million reduction in transportation costs for Q4 2023.
+- Built an outbound order optimization (O3) engine using mixed-integer programming (MIP) and linear regression for GDCs and RDCs to smooth store inbound volumes, improve truck arrival time consistency and facilitate store labor planning.
+- Devised a network planning model employing integer programming (IP) and K-means clustering to optimize shipment consolidation efficiency for Walmart's largest inbound transportation network.
+- Tech stack: Python, Java, Google OR-Tools, CPLEX | IP, MIP, Heuristics, Linear regression, Clustering
+
+*Staff Data Scientist*
+
+- Designed and implemented a cloud-based distributed shipment consolidation engine for Walmart's high-volume inbound transportation network, optimizing 100,000+ shipments during peak periods. It consists of a heuristic-driven partition engine to segment the network, a column generation-based consolidation engine that iteratively identifies cost-effective candidate loads, and a MIP-based picking engine for final load selection. Realized \$1 million monthly transportation cost reductions in 2023, with progress toward replacing the current industry-leading commercial solver.
+- Developed a rapid heuristic algorithm for solving the fixed sequence 3D bin packing problem in GDC pallet building process, addressing the 6-month learning curve and high turnover rates for new hires. Attained an average of 20s for full pallet building with 100+ heterogeneous cases, yielding 85+\% packing efficiency and 80+\% pallet stability.  Conducted successful pilots in 2 GDCs, revealing a 70\% decrease in the learning curve and an anticipated \$10 million yearly savings if used across all GDCs.
+- Assisted the global logistics team in selecting optimal ocean carriers and reducing total transportation costs, resulting in a cost reduction of \$90 million during the challenging disruptions of the COVID-19 impacted global supply chain in fiscal year 2021.
+- Tech stack: Java, CPLEX, SpringBoot Microservices | Column Generation, MIP, Vehicle Routing/Bin Packing Heuristics
+
+*Senior Data Scientist*
+
+
+- Conceptualized and developed a profiling application prototype, enabling GDCs to attain optimal item-to-slot assignments. Participated in end-to-end system development encompassing both frontend and backend components.
+- Overhauled legacy MIP-based optimization engine for optimal carrier and load quantity determination in Walmart's ocean procurement during fiscal year 2020. Strengthened modeling capabilities and constraint adaptability to encompass operational and strategic factors. Offered on-site optimization support across numerous bidding cycles, resulting in \$30 million operational cost savings, noteworthy labor hour reduction, and heightened stability within the Walmart supply chain.
+- Tech Stack: Java, JavaScript | MIP, Heuristics
+
+*Data Scientist*
+
+- Constructed a column-generation-driven optimization engine in a rolling horizon framework, focusing on assigning drivers to tractors to optimize tractor utilization and reduce driver split-seat instances. Generated \$4 million labor cost savings and \$8 million operational cost savings annually through this approach.
+- Implemented a column-generation-based optimization engine to estimate store-level customer purchase probability based on historical transaction data. Built a MIP engine to decide optimal offer set for each category at store level.
+- Migrated legacy truckload optimization COBOL code to Java, reducing data processing time from 10 minutes to 10 seconds. Developed heuristic algorithms to solve instances with large number of orders, resulting in a daily reduction of 14 trucks.
+- Tech stack: Java, COBOL | Column Generation, MIP, Heuristics
+
+*Global Business Process Intern*
+
+- Contributed to the implementation and validation of next generation inventory optimization model for Walmart U.S., yielding an 8\% improvement over the existing system in pilot store trials. Spearheaded the data platform migration from Teradata to Hadoop, implementing data ETL processes and Hive queries.
+
+
+
+<!-- ### Publications
+
+#### Facebook
+::: {.d-flex .justify-content-between}
+::: {}
+test
+:::
+::: {.text-end}
+2011-2022
+:::
+::: -->
