--- a/docs/blog/index.qmd
+++ b/docs/blog/index.qmd
@@ -9,7 +9,7 @@ listing:
     categories: true
     feed: true
 page-layout: full
-margin-header: signup.html
+# margin-header: signup.html
 title-block-banner: "#EDF3F9"
 title-block-banner-color: body
 search: false
