--- a/index.qmd
+++ b/index.qmd
@@ -11,10 +11,33 @@ page-layout: full
 I am an Operations Research Scientist and Machine Learning practitioner.
 
 I am currently working at Marriott Vacations Worldwide responsible for marketing campaign optimization, inventory control and revenue management.
-
 Previously, I contributed to various supply chain optimization projects at Walmart Global Technology. 
 
 My academic journey includes earning a Ph.D. in Industrial Engineering from the University of Arkansas, where my research centered on solving vehicle routing problems. Prior to that, I obtained both my B.S. and M.S. degrees in Industrial Engineering from Huazhong University of Science and Technology in China.
+
+My competitive strengths:
+
+- Solid academic background in Operations Research theories and techniques.
+- Extensive experience in solving large-scale optimization problems in supply chain.
+- Deep hands-on skills in building efficient and scalable optimization products.
+
+My domain expertise acquired through industrial experience:
+
+- Transportation
+  - Route and delivery optimization.
+  - Job/drive scheduling optimization.
+- Fulfillment
+  - Warehouse inbound: item/slot profiling.
+  - Warehouse outbound: trip building, pallet building.
+- Replenishment
+  - Truckload optimization.
+  - Inventory optimization.
+  - Order optimization.
+- Marketing
+  - Marketing campaign optimization.
+- Revenue manegement
+  - Inventory control.
+
 :::
 
 <div class="column-margin column-container">
@@ -45,8 +68,9 @@ My academic journey includes earning a Ph.D. in Industrial Engineering from the 
 <!-- <a class="btn btn-outline-dark", href="https://arxiv.org/a/dimmery_d_1.html" target="_blank" rel="noopener noreferrer">
     <i class="ai ai-arxiv" role='img' aria-label='arXiv'></i>
 </a>
+-->
 
-<a class="btn btn-outline-dark", href="mailto:pddimmery@gmail.com" target="_blank" rel="noopener noreferrer">
+<!-- <a class="btn btn-outline-dark", href="mailto:kunlei.lian@gmail.com" target="_blank" rel="noopener noreferrer">
     <i class="ai bi-envelope" role='img' aria-label='email'></i>
 </a> -->
 ```
