--- a/about.qmd
+++ b/about.qmd
@@ -61,7 +61,7 @@ October 2023 - present
 **Walmart**  
 :::
 ::: {.text-end}
-Map 2016 - August 2023
+May 2016 - August 2023
 :::
 :::
 *Principal Data Scientist*
